; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_tcpip.c_tcpip_stoptimer.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_tcpip.c_tcpip_stoptimer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcpip_sock = type { i64 }

@tcpip_time = common dso_local global i64 0, align 8
@uip_tcp_active_pcbs = common dso_local global i64 0, align 8
@uip_tcp_tw_pcbs = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tcpip_stoptimer(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.tcpip_sock*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.tcpip_sock* @tcpip_getsocket(i32 %4)
  store %struct.tcpip_sock* %5, %struct.tcpip_sock** %3, align 8
  %6 = load %struct.tcpip_sock*, %struct.tcpip_sock** %3, align 8
  %7 = icmp ne %struct.tcpip_sock* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %24

9:                                                ; preds = %1
  %10 = load i64, i64* @tcpip_time, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %24

12:                                               ; preds = %9
  %13 = load %struct.tcpip_sock*, %struct.tcpip_sock** %3, align 8
  %14 = getelementptr inbounds %struct.tcpip_sock, %struct.tcpip_sock* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %24

17:                                               ; preds = %12
  %18 = load i64, i64* @uip_tcp_active_pcbs, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %17
  %21 = load i64, i64* @uip_tcp_tw_pcbs, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %20, %17
  store i64 0, i64* @tcpip_time, align 8
  br label %24

24:                                               ; preds = %8, %23, %20, %12, %9
  ret void
}

declare dso_local %struct.tcpip_sock* @tcpip_getsocket(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
